working on colab notebooks

--- a/kaggle-studies/airbnb.ipynb
+++ b/kaggle-studies/airbnb.ipynb
@@ -1,36 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "TA-INT-Atividade",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "epnVf4he4tUE"
       },
+      "outputs": [],
       "source": [
         "# Bibliotecas Públicas\n",
         "import numpy as np\n",
         "import pandas as pd"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -39,14 +24,8 @@
         "id": "7BxYa8u76FAh",
         "outputId": "6a8fd183-ea4f-4234-b12d-77e0f3faa644"
       },
-      "source": [
-        "airbnb = pd.read_csv(\"https://drive.google.com/u/0/uc?id=1SILFvyfG1IzM9OEh7MIX5v_HCNr3GpEw&export=download\", low_memory=False)\n",
-        "airbnb.head(100)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -290,7 +269,7 @@
               "    <tr>\n",
               "      <th>98</th>\n",
               "      <td>Bondi Beach</td>\n",
-              "      <td>151.271169</td>\n",
+              "      <td>151.271168</td>\n",
               "      <td>-33.892324</td>\n",
               "      <td>93.412413</td>\n",
               "      <td>0</td>\n",
@@ -337,29 +316,87 @@
               "</div>"
             ],
             "text/plain": [
-              "                             city  ...  price\n",
-              "0                          Coogee  ...    319\n",
-              "1                     Chippendale  ...    109\n",
-              "2   Council of the City of Sydney  ...    100\n",
-              "3                     Bondi Beach  ...     65\n",
-              "4                     North Bondi  ...   2550\n",
-              "..                            ...  ...    ...\n",
-              "95                        Kogarah  ...     60\n",
-              "96                        Pyrmont  ...    120\n",
-              "97                      Roseville  ...    300\n",
-              "98                    Bondi Beach  ...     94\n",
-              "99                      Petersham  ...    200\n",
+              "                             city   longitude   latitude  \\\n",
+              "0                          Coogee  151.253102 -33.915035   \n",
+              "1                     Chippendale  151.202260 -33.884258   \n",
+              "2   Council of the City of Sydney  151.203609 -33.910015   \n",
+              "3                     Bondi Beach  151.271400 -33.883456   \n",
+              "4                     North Bondi  151.275143 -33.883958   \n",
+              "..                            ...         ...        ...   \n",
+              "95                        Kogarah  151.134949 -33.964974   \n",
+              "96                        Pyrmont  151.196448 -33.870403   \n",
+              "97                      Roseville  151.189254 -33.780033   \n",
+              "98                    Bondi Beach  151.271168 -33.892324   \n",
+              "99                      Petersham  151.163941 -33.889632   \n",
+              "\n",
+              "    review_scores_rating  number_of_reviews  minimum_nights  security_deposit  \\\n",
+              "0              93.412413                  0               5                 0   \n",
+              "1              90.000000                 48               1               300   \n",
+              "2             100.000000                  2               3                 0   \n",
+              "3              93.412413                  0               7               150   \n",
+              "4              93.412413                  0               7              5000   \n",
+              "..                   ...                ...             ...               ...   \n",
+              "95             80.000000                  3               1                 0   \n",
+              "96             99.000000                 16               2               500   \n",
+              "97             93.412413                  0               5                 0   \n",
+              "98             93.412413                  0               2                 0   \n",
+              "99             95.000000                  4              14                 0   \n",
+              "\n",
+              "    cleaning_fee  accommodates  bathrooms  bedrooms  beds property_type  \\\n",
+              "0              0             6        1.0       3.0   3.0         House   \n",
+              "1             49             3        1.0       0.0   2.0     Apartment   \n",
+              "2             50             2        1.0       1.0   1.0     Apartment   \n",
+              "3             50             1        1.0       1.0   3.0     Apartment   \n",
+              "4            540            12        4.0       6.0   7.0         House   \n",
+              "..           ...           ...        ...       ...   ...           ...   \n",
+              "95            10             2        1.0       1.0   1.0     Apartment   \n",
+              "96            30             2        1.0       1.0   1.0     Apartment   \n",
+              "97             0             7        1.0       4.0   5.0         House   \n",
+              "98            25             3        1.0       1.0   1.0     Apartment   \n",
+              "99           100             7        2.0       3.0   6.0         House   \n",
+              "\n",
+              "          room_type  availability_365  host_identity_verified  \\\n",
+              "0   Entire home/apt                 0                       0   \n",
+              "1   Entire home/apt                73                       1   \n",
+              "2   Entire home/apt                 0                       0   \n",
+              "3      Private room               364                       0   \n",
+              "4   Entire home/apt                63                       1   \n",
+              "..              ...               ...                     ...   \n",
+              "95     Private room                 0                       0   \n",
+              "96     Private room                 0                       0   \n",
+              "97  Entire home/apt                 0                       0   \n",
+              "98  Entire home/apt                 0                       1   \n",
+              "99  Entire home/apt               238                       0   \n",
+              "\n",
+              "    host_is_superhost          cancellation_policy  price  \n",
+              "0                   0                     moderate    319  \n",
+              "1                   0  strict_14_with_grace_period    109  \n",
+              "2                   0                     moderate    100  \n",
+              "3                   0  strict_14_with_grace_period     65  \n",
+              "4                   0  strict_14_with_grace_period   2550  \n",
+              "..                ...                          ...    ...  \n",
+              "95                  0  strict_14_with_grace_period     60  \n",
+              "96                  1                     moderate    120  \n",
+              "97                  0                     flexible    300  \n",
+              "98                  0                     flexible     94  \n",
+              "99                  0  strict_14_with_grace_period    200  \n",
               "\n",
               "[100 rows x 19 columns]"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "airbnb = pd.read_csv(\"https://drive.google.com/u/0/uc?id=1SILFvyfG1IzM9OEh7MIX5v_HCNr3GpEw&export=download\", low_memory=False)\n",
+        "airbnb.head(100)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -367,14 +404,8 @@
         "id": "Ul01ScPF6g1m",
         "outputId": "25847605-b4df-4fb7-bc5b-d6a5b196157f"
       },
-      "source": [
-        "missing_values = airbnb.isnull().sum()\n",
-        "missing_values"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "city                      0\n",
@@ -399,9 +430,14 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "missing_values = airbnb.isnull().sum()\n",
+        "missing_values"
       ]
     },
     {
@@ -409,12 +445,11 @@
       "metadata": {
         "id": "3vrsnfp4BoXI"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -423,13 +458,8 @@
         "id": "V9tnsO6m9Hrv",
         "outputId": "bf6b0be5-5bf3-4187-a431-6a2e2f4f1219"
       },
-      "source": [
-        "airbnb.info()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -630,9 +660,13 @@
               "[8 rows x 15 columns]"
             ]
           },
+          "execution_count": 21,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "airbnb.info()"
       ]
     },
     {
@@ -657,6 +691,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -665,21 +700,8 @@
         "id": "0yQ3in5Hr1No",
         "outputId": "251ebbc4-82ae-402c-c159-fb4d02571c56"
       },
-      "source": [
-        "# Data for Simple Linear Regression\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "y = airbnb[\"price\"]\n",
-        "X = airbnb.drop([\"price\"], axis=1)\n",
-        "\n",
-        "X = X.drop([\"city\", \"accommodates\", \"longitude\", \"latitude\", \"review_scores_rating\", \"number_of_reviews\", \"cleaning_fee\", \"bathrooms\", \"bedrooms\", \"beds\", \"property_type\", \"room_type\", \"availability_365\", \"host_identity_verified\", \"minimum_nights\", \"host_is_superhost\", \"cancellation_policy\"], axis=1)\n",
-        "\n",
-        "X.head()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -737,22 +759,34 @@
               "4              5000"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Data for Simple Linear Regression\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "y = airbnb[\"price\"]\n",
+        "X = airbnb.drop([\"price\"], axis=1)\n",
+        "\n",
+        "X = X.drop([\"city\", \"accommodates\", \"longitude\", \"latitude\", \"review_scores_rating\", \"number_of_reviews\", \"cleaning_fee\", \"bathrooms\", \"bedrooms\", \"beds\", \"property_type\", \"room_type\", \"availability_365\", \"host_identity_verified\", \"minimum_nights\", \"host_is_superhost\", \"cancellation_policy\"], axis=1)\n",
+        "\n",
+        "X.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "A0sd7fTrE-u_"
       },
+      "outputs": [],
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=1/3, random_state=42)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -765,6 +799,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -772,29 +807,29 @@
         "id": "p0RORbIuNWRz",
         "outputId": "e123ae5f-3715-40cd-c68d-3e01d1509690"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
         "# Simple Linear Regression to City\n",
         "security_deposit_lr = LinearRegression()\n",
         "security_deposit_lr.fit(X_train, y_train)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -803,25 +838,8 @@
         "id": "Wz5H7ZtYjBCu",
         "outputId": "25b6014f-ca5b-41c9-e955-7a57ecb8bf10"
       },
-      "source": [
-        "# Visualising the Linear Regression results\n",
-        "\n",
-        "# Visual libraries\n",
-        "import plotly.graph_objs as go\n",
-        "\n",
-        "fig = go.Figure()\n",
-        "fig.add_trace(go.Scatter(x=X_train[\"security_deposit\"], y=y_train, name='security_deposit train', mode='markers'))\n",
-        "fig.add_trace(go.Scatter(x=X_train[\"security_deposit\"], y=security_deposit_lr.predict(X_train), mode='lines', name='security_deposit regression'))\n",
-        "\n",
-        "fig.update_layout(xaxis={\"title\": \"Security Deposit\"},\n",
-        "                  yaxis={\"title\": \"Preço\"})\n",
-        "\n",
-        "fig.show()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -875,12 +893,29 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# Visualising the Linear Regression results\n",
+        "\n",
+        "# Visual libraries\n",
+        "import plotly.graph_objs as go\n",
+        "\n",
+        "fig = go.Figure()\n",
+        "fig.add_trace(go.Scatter(x=X_train[\"security_deposit\"], y=y_train, name='security_deposit train', mode='markers'))\n",
+        "fig.add_trace(go.Scatter(x=X_train[\"security_deposit\"], y=security_deposit_lr.predict(X_train), mode='lines', name='security_deposit regression'))\n",
+        "\n",
+        "fig.update_layout(xaxis={\"title\": \"Security Deposit\"},\n",
+        "                  yaxis={\"title\": \"Preço\"})\n",
+        "\n",
+        "fig.show()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -888,32 +923,60 @@
         "id": "1ZHPMtD47rX6",
         "outputId": "c078a9b4-a32d-4e48-c4c9-9490ec3a0961"
       },
-      "source": [
-        "clf_score = security_deposit_lr.score(X_test,y_test)\n",
-        "pred_clf = security_deposit_lr.predict(X_test)\n",
-        "print(\"Regression Model Score is : \", round(clf_score*100))"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Regression Model Score is :  17\n"
           ]
         }
+      ],
+      "source": [
+        "clf_score = security_deposit_lr.score(X_test,y_test)\n",
+        "pred_clf = security_deposit_lr.predict(X_test)\n",
+        "print(\"Regression Model Score is : \", round(clf_score*100))"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "PBA-vYn2kdVe"
       },
+      "outputs": [],
       "source": [
         "airbnb = airbnb.drop(5005)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "TA-INT-Atividade",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
